src/scss/block/text.scss
@import "~scss/_vars";

.blocks {
	.block.blockText { @include text-paragraph; word-wrap: break-word; }
	.block.blockText {
		#value { 
			-webkit-user-modify: read-write-plaintext-only; width: 100%; overflow: hidden; position: relative; z-index: 1; user-select: text;
			padding: 1px 0px;
		}
		#value * { user-select: text !important; }
		#value.focusable.isFocused { background: none; }

		.placeholder { display: none; }

		kbd { 
			display: inline; font-family: 'Plex'; border-radius: 4px; background: $colorBorderLight; padding: 2px 4px;
		}

		.disabled { color: $colorMediumGrey; opacity: 1 !important; }

		smile {
			img { position: static !important; left: auto !important; top: auto !important; margin: 0px !important; vertical-align: top; }
		}
		smile * { display: inline; vertical-align: middle; }
		smile .loaderWrapper { display: inline-block; }

		emoji { display: inline; user-select: all; }
		emoji * { user-select: all; }
		emoji {
			smile img { vertical-align: top; }
		}

		lnk { position: relative; }
		lnk, obj { cursor: pointer; color: inherit; text-decoration: none; font-weight: 500; border-bottom: 0.075em solid; transition: border-color 0.2s ease-in-out; }
		lnk.disabled, obj.disabled { border-width: 0px; }

		mention { cursor: pointer; display: inline; user-select: all !important; position: relative; }
		mention * { user-select: text !important; }
		mention {
			smile { display: none; position: relative; z-index: 1; }
			.space { width: 4px; height: 20px; margin-top: -4px; vertical-align: middle; display: none; }

			name { display: inline; white-space: normal; vertical-align: top; position: relative; font-weight: 500; }
		}
		mention.disabled {
			name { border-width: 0px; }
		}
		mention.withImage {
			smile { display: inline; }
			.space { display: inline; }
		}
		mention.withImage.c24 name bgcolor:first-child { margin-left: -22px; padding-left: 22px; }
		mention.withImage.c26 name bgcolor:first-child { margin-left: -22px; padding-left: 22px; }
		mention.withImage.c28 name bgcolor:first-child { margin-left: -27px; padding-left: 27px; }
		mention.withImage.c32 name bgcolor:first-child { margin-left: -34px; padding-left: 34px; }
		
		mention:hover {
			name::before { border-color: $colorBlack; }
		}

		bold { font-weight: 600; }
		italic { font-style: italic; }
		strike { text-decoration: line-through; }
		underline { border-bottom: 0.05em solid; }
		
		.markers { display: flex; }
		.markers {
			.marker { 
				text-align: center; display: inline-block; vertical-align: top; position: relative; width: 24px; height: 24px; 
				line-height: 24px; margin-right: 6px;
			}
			.marker {
				.icon { display: inline-block; }
			}
			
			.marker.number { vertical-align: baseline; min-width: 24px; width: auto; word-break: normal; }
			.marker.number > span { min-width: 100%; display: inline-block; text-align: center; }
			
			.marker.check, .marker.toggle { cursor: pointer; }
			.marker.check, .marker.toggle {
				img { width: 100%; height: 100%; }
			}
		}
	}

	.block.blockText > .wrapContent > .selectable.isSelectionSelected::after { z-index: 0; }
	.block.blockText > .wrapContent > .selectable > .dropTarget > .flex > .wrap { flex: auto; position: relative; padding: 0px; width: 100%; }	
	.block.blockText > .wrapContent > .selectable > .dropTarget #value.isFocused { background: none; }

	.block.blockText.isReadonly > .wrapContent > .selectable > .dropTarget .marker.check { cursor: default; }
	.block.blockText.isReadonly > .wrapContent > .selectable > .dropTarget #value { min-height: 24px; cursor: text !important; user-select: text !important; }
	.block.blockText.isReadonly > .wrapContent > .selectable > .dropTarget > .flex > .placeholder { display: none; }
	.block.blockText.isReadonly.textCode > .wrapContent > .selectable > .dropTarget #value { padding: 16px; }
	.block.blockText.isReadonly.textTitle > .wrapContent > .selectable > .dropTarget > .flex > #value { min-height: 1em; }

	.block.blockText.isChecked > .wrapContent > .selectable > .dropTarget * { color: $colorMediumGrey !important; }

	.block.blockText > .wrapContent > .selectable > .dropTarget { padding: 2px 0px; }

	.block.blockText.textTitle { padding: 22px 0px 6px 0px !important; @include text-title; }
	.block.blockText.textTitle {
		.placeholder { 
			color: $colorMediumGrey; position: absolute; z-index: 0; left: 0px; top: 0px; display: none;
			width: 100%; height: 100%; cursor: text; 
		}
		#value { -webkit-user-modify: read-write-plaintext-only; }
	}
	.block.blockText.textTitle > .wrapContent > .selectable > .dropTarget { padding: 3px 0px 1px 0px; }

	.block.blockText.textDescription { padding: 0px 0px 6px 0px; @include text-description; }

	.block.blockText.textHeader1 { padding: 22px 0px 0px 0px; }
	.block.blockText.textHeader1 > .wrapContent > .selectable > .dropTarget { @include text-header1; line-height: 35px; padding: 3px 0px 1px 0px; }
	.block.blockText.textHeader1 > .wrapContent > .selectable > .dropTarget mention .space { width: 6px; height: 32px; }
	
	.block.blockText.textHeader2 { padding: 14px 0px 0px 0px; }
	.block.blockText.textHeader2 > .wrapContent > .selectable > .dropTarget { @include text-header2; padding: 2px 0px 1px 0px; }
	.block.blockText.textHeader2 > .wrapContent > .selectable > .dropTarget mention .space { width: 5px; height: 28px; }
	
	.block.blockText.textHeader3 { padding: 14px 0px 0px 0px; }
	.block.blockText.textHeader3 > .wrapContent > .selectable > .dropTarget { @include text-header3; padding: 1px 0px 2px 0px; }
	.block.blockText.textHeader3 > .wrapContent > .selectable > .dropTarget mention .space { width: 5px; height: 26px; }
	
	.block.blockText.textQuote { padding: 6px 0px 6px 0px; }
	.block.blockText.textQuote > .wrapContent > .selectable > .dropTarget { @include text-quote; padding: 1px 0px 2px 0px; }
	.block.blockText.textQuote > .wrapContent > .selectable > .dropTarget mention .space { width: 5px; height: 26px; }
	.block.blockText.textQuote > .wrapContent > .additional > .line { 
		width: 0px; height: 100%; position: absolute; left: 11px; top: 0px; border-left: 2px solid $colorOrange; 
	}
	.block.blockText.textQuote > .wrapContent > .selectable > .dropTarget > .flex > .wrap { padding-left: 28px; }
	.block.blockText.textQuote > .wrapContent > .selectable > .dropTarget > .flex > .wrap > .placeholder { left: 28px; }

	.block.blockText.textQuote.align2 > .wrapContent > .selectable > .dropTarget > .flex > .wrap { padding-right: 28px; }
	.block.blockText.textQuote.align2 > .wrapContent > .additional > .line { left: auto; right: 11px; }
	.block.blockText.textQuote.align2 > .wrapContent > .selectable > .dropTarget > .flex > .wrap > .placeholder { left: auto; right: 28px; }
	
	.block.blockText.textCallout { min-width: 130px; }
	.block.blockText.textCallout > .wrapContent { background: $colorVeryLightGrey; border-radius: 6px; margin: 6px 0px; }
	.block.blockText.textCallout > .wrapContent > .selectable > .dropTarget { padding: 16px 16px 0px 16px; }
	.block.blockText.textCallout > .wrapContent > .selectable > .dropTarget > .flex { gap: 0px 14px; }
	.block.blockText.textCallout > .wrapContent > .selectable > .dropTarget > .flex {
		.markers { display: none; }
		.additional { flex-shrink: 0; }
		.additional {
			.iconObject { margin-top: 2px; }
		}
	}
	.block.blockText.textCallout > .wrapContent > .dropTarget.targetBot { display: block; height: 16px; position: static; }
	.block.blockText.textCallout > .wrapContent > .dropTarget.targetBot.isOver.bottom { box-shadow: 0px -2px 0px $colorOrange inset; }
	.block.blockText.textCallout.last > .wrapContent { margin-bottom: 0px; }

	.block.blockText.textCode { padding: 6px 0px; }
	.block.blockText.textCode > .wrapContent > .selectable > .dropTarget { padding: 24px 0px 0px 0px; background: rgba(247,245,240,0.5); }
	.block.blockText.textCode > .wrapContent > .selectable > .dropTarget #value { padding: 16px; }
	.block.blockText.textCode > .wrapContent > .selectable > .dropTarget > .flex { position: static; } 
	.block.blockText.textCode > .wrapContent > .selectable > .dropTarget > .flex {
		#value { font-family: 'Plex'; @include text-common; tab-size: 4; }
		#value * { background: none; }

		.additional { position: absolute; top: 9px; left: 0px; z-index: 1; display: block; padding: 0px 16px; width: 100%; }
		.additional {
			.select { border: 0px; color: $colorMediumGrey; @include text-common; border-radius: 0px; padding: 0px 20px 0px 0px; }
			.select {
				.name { overflow: visible; }
			}
			.select:hover, .select.active { background: none; }
			
			.buttons { 
				position: absolute; right: 16px; top: 0px; display: flex; flex-direction: row; gap: 0px 8px; opacity: 0; 
				transition: $transitionFast;
			}
			.buttons {
				.btn { 
					padding: 0px; height: 20px; line-height: 20px; color: $colorMediumGrey; @include text-common; cursor: pointer; 
					display: flex; flex-direction: row; gap: 0px 4px; align-items: center;
				}
				.btn {
					.icon { flex-shrink: 0; width: 20px; height: 20px; cursor: pointer; }
					.icon.codeWrap { background-image: url('~img/icon/menu/action/wrap0.svg'); }
					.icon.copy { background-image: url('~img/icon/menu/action/copy0.svg'); }

					.txt { line-height: 20px; vertical-align: top; }
				}
			}
		}
	}
	.block.blockText.textCode:hover > .wrapContent > .selectable > .dropTarget > .flex {
		.additional .buttons { opacity: 1; }
	}
	.block.blockText.textCode.isReadonly > .wrapContent > .selectable > .dropTarget > .flex {
		#value { white-space: pre !important; }
		.additional { display: none; }
	}
	.block.blockText.textCode.isUnwrapped > .wrapContent > .selectable > .dropTarget #value { white-space: nowrap; overflow-x: auto; }

	.block.blockText.textParagraph > .wrapContent > .dropTarget.targetBot.isOver.bottom,
	.block.blockText.textQuote > .wrapContent > .dropTarget.targetBot.isOver.bottom,
	.block.blockText.textBulleted > .wrapContent > .dropTarget.targetBot.isOver.bottom,
	.block.blockText.textNumbered > .wrapContent > .dropTarget.targetBot.isOver.bottom,
	.block.blockText.textCheckbox > .wrapContent > .dropTarget.targetBot.isOver.bottom,
	.block.blockText.textToggle > .wrapContent > .dropTarget.targetBot.isOver.bottom
	{ box-shadow: 0px -2px 0px $colorOrange inset; }

	.block.blockText.textParagraph > .wrapContent.bgColor > .selectable > .dropTarget, 
	.block.blockText.textHeader1 > .wrapContent.bgColor > .selectable > .dropTarget,
	.block.blockText.textHeader2 > .wrapContent.bgColor > .selectable > .dropTarget,
	.block.blockText.textHeader3 > .wrapContent.bgColor > .selectable > .dropTarget
	{ padding-left: 8px; padding-right: 8px;  }
}

.editorWrapper.isTask {
	.blocks .block.blockText.textTitle { @include text-header1; }
	.blocks .block.blockText.textTitle {
		.flex { gap: 0px 8px; }
		.marker { width: 30px; height: 30px; margin: 0px; }
	}
}

